fix for descriptions + dayrates

--- a/src/config.json
+++ b/src/config.json
@@ -1,1 +1,1 @@
-{"db_path":"./storage/db.sqlite","last_page":"settings","display_hotkeys":true}
+{"db_path":"./storage/db.sqlite","last_page":"assets","display_hotkeys":true}
