--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "asset-manager",
-  "productName": "asset-manager",
+  "name": "vestis",
+  "productName": "Vestis",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "An asset manager",
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -30,8 +30,7 @@
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "ts-node": "^10.0.0",
-    "typescript": "~4.5.4",
-    "vite": "^6.1.1"
+    "typescript": "~4.5.4"
   },
   "keywords": [],
   "author": {
@@ -44,7 +43,9 @@
     "dotenv": "^16.4.5",
     "electron-squirrel-startup": "^1.0.1",
     "express": "^4.21.1",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "vite": "^6.1.1"
   }
 }
