switch build system?

--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,6 @@ coverage
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
-
 # Dependency directories
 node_modules/
 jspm_packages/
@@ -94,3 +91,5 @@ out/
 *.sqlite
 
 config.json
+dist*
+release
