--- a/package.json
+++ b/package.json
@@ -3,47 +3,44 @@
   "productName": "Vestis",
   "version": "1.0.0",
   "description": "An asset manager",
-  "main": ".vite/build/main.js",
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+  "main": "dist-electron/main.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/targoninc/vestis.git"
   },
-  "devDependencies": {
-    "@electron-forge/cli": "^7.6.0",
-    "@electron-forge/maker-deb": "^7.6.0",
-    "@electron-forge/maker-rpm": "^7.6.0",
-    "@electron-forge/maker-squirrel": "^7.6.0",
-    "@electron-forge/maker-zip": "^7.6.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.6.0",
-    "@electron-forge/plugin-fuses": "^7.6.0",
-    "@electron-forge/plugin-vite": "^7.6.0",
-    "@electron/fuses": "^1.8.0",
-    "@types/cors": "^2.8.17",
-    "@types/electron-squirrel-startup": "^1.0.2",
-    "@types/express": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "electron": "33.2.1",
-    "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.25.0",
-    "ts-node": "^10.0.0",
-    "typescript": "~4.5.4"
+  "license": "MIT",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build && electron-builder"
   },
   "keywords": [],
   "author": {
     "name": "alexa",
     "email": "alex@targoninc.com"
   },
-  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^20.14.10",
+    "electron": "^31.1.0",
+    "electron-builder": "^24.13.3",
+    "sqlite3": "^5.1.7",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3",
+    "vite-plugin-electron": "^0.28.7",
+    "vite-plugin-native": "^2.2.1",
+    "@types/cors": "^2.8.17",
+    "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/express": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-plugin-import": "^2.25.0",
+    "ts-node": "^10.0.0"
+  },
   "dependencies": {
     "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "electron-squirrel-startup": "^1.0.1",
-    "electron-vite": "^3.0.0",
     "express": "^4.21.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
