switch build system.

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -3,7 +3,7 @@
  */
 {
   "appId": "vestis",
-  "asar": true,
+  "asar": false,
   "productName": "Vestis",
   "copyright": "Copyright © 2025 ${author}",
   "directories": {
