--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [windows-latest, macos-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
@@ -29,14 +29,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run electron-forge make
-        run: npm run make
+      - name: Run build
+        run: npm run build
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build-output
-          path: out/make/
+          path: out/release
           retention-days: 1
 
   release:
@@ -50,17 +50,17 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-output
-          path: out/make
+          path: out/release
 
       - name: Debug build output
         run: |
-          ls -R out/
-
-      - uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
-          files: |
-            out/make/squirrel.windows/**/*.exe
+          ls -R out/release
+#
+#      - uses: "marvinpinto/action-automatic-releases@latest"
+#        with:
+#          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+#          automatic_release_tag: "latest"
+#          prerelease: true
+#          title: "Development Build"
+#          files: |
+#            out/make/squirrel.windows/**/*.exe
