--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -30,6 +30,7 @@
   },
   "mac": {
     "target": ["dmg"],
+    "arch": ["x64", "arm64"],
     "artifactName": "${productName}-Mac-${version}-Installer.${ext}"
   },
   "linux": {
