--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -34,6 +34,7 @@
   },
   "linux": {
     "target": ["AppImage"],
+    "category": "Office",
     "artifactName": "${productName}-Linux-${version}.${ext}"
   }
 }
