--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -34,6 +34,7 @@
   },
   "linux": {
     "target": ["AppImage"],
+    "icon": "build/256x256.png",
     "category": "Office",
     "artifactName": "${productName}-Linux-${version}.${ext}"
   }
