--- a/package.json
+++ b/package.json
@@ -18,28 +18,28 @@
     "email": "alex@targoninc.com"
   },
   "devDependencies": {
-    "@types/node": "^20.14.10",
-    "electron": "^31.1.0",
-    "electron-builder": "^24.13.3",
-    "sqlite3": "^5.1.7",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.3",
-    "vite-plugin-electron": "^0.28.7",
-    "vite-plugin-native": "^2.2.1",
     "@types/cors": "^2.8.17",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/express": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.25.0",
-    "ts-node": "^10.0.0"
+    "@types/node": "^22.13.5",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "electron": "^34.2.0",
+    "electron-builder": "^25.1.8",
+    "eslint": "^9.21.0",
+    "eslint-plugin-import": "^2.31.0",
+    "sqlite3": "^5.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.1",
+    "vite-plugin-electron": "^0.29.0",
+    "vite-plugin-native": "^2.2.2"
   },
   "dependencies": {
     "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
