--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -16,7 +16,7 @@
   "win": {
     "target": [
       {
-        "target": "nsis",
+        "target": "msi",
         "arch": ["x64"]
       }
     ],
