--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
+    "@types/winston": "^2.4.4",
+    "@types/winston-syslog": "^2.4.3",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "electron": "^34.2.0",
     "electron-builder": "^25.1.8",
     "eslint": "^9.21.0",
     "eslint-plugin-import": "^2.31.0",
-    "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "vite": "^6.1.1",
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-native": "^2.2.2"
   },
@@ -43,6 +43,8 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
-    "vite": "^6.1.1"
+    "vite": "^6.1.1",
+    "winston": "^3.17.0",
+    "winston-syslog": "^2.7.1"
   }
 }
