--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -20,6 +20,7 @@
         "arch": ["x64"]
       }
     ],
+    "requestedExecutionLevel": "requireAdministrator",
     "artifactName": "${productName}-Windows-${version}-Setup.${ext}"
   },
   "nsis": {
