--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
-    "vite": "^6.1.1",
-    "winston": "^3.17.0",
-    "winston-syslog": "^2.7.1"
+    "vite": "^6.1.1"
   }
 }
